--- a/IvasList/src/main/res/values/strings.xml
+++ b/IvasList/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Iva\'s List</string>
+    <string name="app_name">Pocketbook</string>
     <string name="tags_label">Tags</string>
     <string name="add_tag_button">New</string>
     <string name="add_tag_title">Add Tag</string>
