Added ability to open the notes list for a given tag
No new notes can be added yet

--- a/IvasList/src/main/res/values/strings.xml
+++ b/IvasList/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="add_tag_cancel_button">@android:string/cancel</string>
     <string name="tag_name_hint">Name of the tag</string>
     <string name="error_no_name">Please enter a name</string>
+    <string name="tag_list_title">taglistTitle</string>
 
 </resources>
